--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,12 +18,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+  background-color: black;
+  color: white;
 }
