--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 html,
 body,
 #root {
@@ -7,6 +9,7 @@ body,
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-family: "Ubuntu Mono", monospace;
 }
 
 a {
